--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
-<!--    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>6.1.2.Final</version>
-      <type>pom</type>
-    </dependency>-->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.9.1</version>
+      <scope>runtime</scope>
+    </dependency>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
